fixed:(header) navbar with scrollbar Auto

--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ nav {
 width: 100%;
 position: fixed;
 z-index: 999;
+overflow-x: auto;
 }
 .navLeft, .navRight {
     padding: 1em;
@@ -182,7 +183,6 @@ section div > h1 {
 }
 .faq:hover .dispNone {
     display:inline-block;
-    transition:all 2s;
 }
 .faq p:first-child {
     display: inline;
